Fix header links on iPhones.

--- a/app/views/styles/application.styl
+++ b/app/views/styles/application.styl
@@ -12,6 +12,8 @@
   max-width: 950px
   margin: auto
   padding: 70px 20px 50px 20px
+  @media all and (max-width: 380px)
+    padding-top: 90px
 
 .page-container
   position: relative
