--- a/app/views/styles/header.styl
+++ b/app/views/styles/header.styl
@@ -25,6 +25,11 @@
   &-link
     float: left
     padding: 0 10px
+    @media all and (max-width: 380px)
+      position: absolute
+      top: 65px
+      left: 10px
+
   &-container
     z-index: 100
     left: 0
